# zebelyan_a_v

./: .gitignore
course_work/: txt.txt
prj.lab/: matrixs
prj.lab/arrayd/: arrayd.cpp
prj.lab/arrayd/include/arrayd/: arrayd.hpp
prj.lab/matrixs/: matrixs.cpp
prj.lab/rational/: rational.cpp
prj.lab/rational/include/rational/: rational.hpp
prj.test/: CMakeLists.txt  rational.test.cpp  rational_test.cpp
zebelyan_a_v/: .buid.bat  CMakeLists.txt
zebelyan_a_v/Doxy/: Doxyfile
zebelyan_a_v/prj.cw/: CMakeLists.txt
zebelyan_a_v/prj.cw/work/: CMakeLists.txt  руководство пользователя.docx
zebelyan_a_v/prj.cw/work/client/: CMakeLists.txt  net_client.cpp
zebelyan_a_v/prj.cw/work/headers/: CMakeLists.txt
zebelyan_a_v/prj.cw/work/headers/include/helpers/: net_client.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
zebelyan_a_v/prj.cw/work/server/: CMakeLists.txt  net_server.cpp
zebelyan_a_v/prj.lab/: CMakeLists.txt
zebelyan_a_v/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
zebelyan_a_v/prj.lab/arrayd/include/arrayd/: arrayd.hpp
zebelyan_a_v/prj.lab/arrayt/: CMakeLists.txt
zebelyan_a_v/prj.lab/arrayt/include/arrayt/: arrayt.hpp
zebelyan_a_v/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
zebelyan_a_v/prj.lab/matrixs/include/matrixs/: matrixs.hpp
zebelyan_a_v/prj.lab/orto/: orto.cpp
zebelyan_a_v/prj.lab/rational/: CMakeLists.txt  rational.cpp
zebelyan_a_v/prj.lab/rational/include/rational/: rational.hpp
zebelyan_a_v/prj.test/: CMakeLists.txt
